// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVault - deposit empty vault: no assets & no shares deposit 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 68902,
}
`;

exports[`EthVault - deposit full vault: assets & shares deposit 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 68902,
}
`;

exports[`EthVault - deposit full vault: assets & shares deposit through receive fallback function 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 76479,
}
`;

exports[`EthVault - deposit full vault: assets & shares executes action hook 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 73783,
}
`;

exports[`EthVault - deposit full vault: assets & shares update state and deposit 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 212166,
}
`;
